--- a/site/now.json
+++ b/site/now.json
@@ -1,7 +1,7 @@
 {
-  "name": "now-example-octozen",
+  "name": "example-zeit-now",
   "alias": [
     "octozen",
-    "now-example-octozen"
+    "example-zeit-now"
   ]
 }
